WIP product-creation code. NPM commands for building and deploying web to target stage.

--- a/web/app/app.css
+++ b/web/app/app.css
@@ -43,3 +43,10 @@ label {
   text-align: right;
   display: none;
 }
+
+.stageLabel {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  padding-right: 1em;
+}
